--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                 <a href="./getting-started.html">Get started</a>
               </li>
               <li class="">
+                <a href="./added-extras.html">Added Extras</a>
+              </li>
+              <li class="">
                 <a href="./scaffolding.html">Scaffolding</a>
               </li>
               <li class="">
