--- a/javascript.html
+++ b/javascript.html
@@ -12,7 +12,15 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/docs.css" rel="stylesheet">
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+
+     <!-- Font Awesome-->
+    <link href="assets/css/font.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    
+    <!-- Font Awesome Animations-->
+    <link rel="stylesheet" href="assets/css/icon-hover.css">
+    <!-- This file is required for slide and flip effects only -->
+    <link rel="stylesheet" href="assets/css/icon-hover-icons.css">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -58,6 +66,9 @@
               </li>
               <li class="">
                 <a href="./getting-started.html">Get started</a>
+              </li>
+              <li class="">
+                <a href="./added-extras.html">Added Extras</a>
               </li>
               <li class="">
                 <a href="./scaffolding.html">Scaffolding</a>
