--- a/getting-started.html
+++ b/getting-started.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Getting · Bootstrap</title>
+    <title>Getting · Bootstrap Rocket</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -154,9 +154,6 @@
   ├── js/
   │   ├── bootstrap.js
   │   ├── bootstrap.min.js
-  ├── img/
-  │   ├── glyphicons-halflings.png
-  │   ├── glyphicons-halflings-white.png
   └── font/
       ├── fontawesome-webfont.eot
       ├── fontawesome-webfont.svg
@@ -165,7 +162,7 @@
       └── FontAwesome.otf
 
 </pre>
-          <p>This is the most basic form of Bootstrap: compiled files for quick drop-in usage in nearly any web project. We provide compiled CSS and JS (<code>bootstrap.*</code>), as well as compiled and minified CSS and JS (<code>bootstrap.min.*</code>). The image files are compressed using <a href="http://imageoptim.com/">ImageOptim</a>, a Mac app for compressing PNGs.</p>
+          <p>This is the most basic form of Bootstrap: compiled files for quick drop-in usage in nearly any web project. We provide compiled CSS and JS (<code>bootstrap.*</code>), as well as compiled and minified CSS and JS (<code>bootstrap.min.*</code>).</p>
           <p>Please note that all JavaScript plugins require jQuery to be included.</p>
         </section>
 
