--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -10,6 +10,9 @@
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../assets/css/icon-hover-icons.css" rel="stylesheet">
+    <link href="../assets/css/icon-hover.css" rel="stylesheet">
     <style>
 
     /* GLOBAL STYLES
@@ -43,9 +46,6 @@
     /* Remove border and change up box shadow for more contrast */
     .navbar .navbar-inner {
       border: 0;
-      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-         -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-              box-shadow: 0 2px 10px rgba(0,0,0,.25);
     }
 
     /* Downsize the brand/project name a bit */
@@ -250,6 +250,8 @@
         line-height: 1.5;
       }
 
+
+
     }
     </style>
 
@@ -324,7 +326,9 @@
             <div class="carousel-caption">
               <h1>Example headline.</h1>
               <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+              <div class="links-icon-text">
+              <a href="#"><i class="icon-smile icon-hover-slide"></i>icon-hover-slide</a>
+            </div>
             </div>
           </div>
         </div>
@@ -367,19 +371,25 @@
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><div class="links-icon-text">
+            <a href="#" class="btn-border btn-border-primary">Read More <i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
+          </div></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Heading</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><div class="links-icon-text">
+            <a href="#" class="btn-border btn-border-primary">Read More <i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
+          </div></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><div class="links-icon-text">
+            <a href="#" class="btn-border btn-border-primary">Read More <i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
+          </div></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
