--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -372,7 +372,7 @@
           <h2>Heading</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
           <p><div class="links-icon-text">
-            <a href="#" class="btn-border btn-border-primary">Read More <i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
+            <a href="#" class="btn-border btn-border-primary btn-sep-top">Read More of the post<i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
           </div></p>
         </div><!-- /.span4 -->
         <div class="span4">
@@ -380,7 +380,7 @@
           <h2>Heading</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><div class="links-icon-text">
-            <a href="#" class="btn-border btn-border-primary">Read More <i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
+            <a href="#" class="btn-border btn-border-primary btn-sep-btm">Read More of the post<i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
           </div></p>
         </div><!-- /.span4 -->
         <div class="span4">
@@ -402,6 +402,9 @@
         <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-chrome.png">
         <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p><div class="links-icon-text">
+            <a href="#" class="btn-border btn-border-primary btn-sep-top">Read More <i class="icon-double-angle-right icon-hover-slide icon-right"></i></a>
+          </div></p>
       </div>
 
       <hr class="featurette-divider">
